1.8.2a:
-------

- Added French language file

1.8.1a:
-------

- Added 2 new services:
    - MySpass
    - Mp3Tube

- Revised 2 services:
    - Dailymotion (added "need login" detection)
    - 123Video

- The last window size and state is now saved

- Fixed bug (Error: Wrong HTTP request were send (wrong host and path))
- Fixed bug (Error: The session was not saved correctly)

- Improved internal "VideoItem" class

Windows:
--------

- Upgraded ffmpeg application to revision 11870


1.8a:
-----

- Added Multiple simultaneous downloads
- Added possibility to Pause and Resume downloads
- Added "Stay always on top" option (accessible from trayIcon->Options->Stay always on top)
- Added "Minimize to System tray" option (accessible from trayIcon->Options->Minimize to System tray)
- Added "Paste URL from Clipboard" button in "Add Video" form
- Added "Time Remaining" for video conversions
- Added After a new installation, the program check for new updates
- Added "Support this project" button in "Information" form
- Added "Information" panel in main form (Display items count, downloading count and total download speed)
- Added "Help messages" (accessible from "?" button)
- Added "Accessible information" usable for people with disabilities
- Added possibility to delete videos pressing the "delete" key
- Added detection of "Need login" videos
- Added more explicit error messages
- Added "View error message" option on found errors
- Added link to "GNU GPL" licence website (in credits form)

- Added 3 new services:
    - Boingboing TV
    - GameTrailers
    - Tudou

- Revised 6 services:
    - YouTube (added support for embedded videos and added "need login" detection)
    - Tu.tv (added "need login" detection)
    - Metacafe
    - PornoTube
    - TuPorno
    - LiveLeak

- Changed licence to GNU GPL v3 (http://www.gnu.org/licenses/gpl.html)
- Changed main window size
- Changed Information window size
- Changed Credits window size
